[package]
name = "qsplatform"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
tokio = { version = "1", features = ["full"] }
pin-project = "1.0"
pin-project-lite = "0.2"
want = "0.3"
futures = "0.3.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8.17"
hyper = { version = "0.14", features = ["full"] }
yansi = "0.5"
ubyte = {version = "0.10", features = ["serde"] }
once_cell = "1.7.2"
log = { version = "0.4", features = ["std", "serde"] }
chrono = "0.4"
